Fix jumpy icons on hover

--- a/src/theme/hud.scss
+++ b/src/theme/hud.scss
@@ -32,8 +32,8 @@
   display: none;
   pointer-events: none;
   user-select: none;
-  font-size: 1.25rem;
-  height: 2rem;
+  font-size: 1.2rem;
+  line-height: 1rem;
 }
 
 .menu-item:hover .menu-item-label {
